--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body class="flex items-center justify-center min-h-screen">
-  <div class="bg-white/70 backdrop-blur-md rounded-xl shadow-lg p-10 text-center max-w-xl mx-auto">
+  <div class="bg-white/30 backdrop-blur-2xl rounded-xl shadow-lg p-10 text-center max-w-xl mx-auto">
     <h1 class="text-xl md:text-2xl font-bold mb-6">
       Your simple click - is my big dream! ❤️
     </h1>
@@ -29,13 +29,12 @@
     <button onclick="checkBalance()" class="bg-gray-900 text-white px-8 py-4 rounded-full text-lg hover:bg-gray-800 transition">
       I Donated — Show Balance
     </button>
-    <p id="balanceResult" class="mt-4 text-gray-700">Checking balance... (Feature Coming Soon)</p>
+    <p id="balanceResult" class="mt-4 text-gray-700"></p>
   </div>
 
   <script>
-    function checkBalance() {
-      document.getElementById('balanceResult').innerText = "Checking balance... (Feature Coming Soon)";
-    }
-  </script>
-</body>
-</html>
+    async function checkBalance() {
+      document.getElementById('balanceResult').innerText = "Checking balance...";
+      try {
+        const response = await fetch('/api/balance');
+        co
