--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Donate USDT</title>
+  <title>Donate USDT — My Big Dream</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
@@ -23,7 +23,7 @@
       background-image: url('background.jpg');
       background-size: cover;
       background-position: center;
-      filter: blur(4px); /* slight blur */
+      filter: blur(5px); /* Slight blur */
       z-index: -1;
     }
 
