--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      color: white;
+      color: black; /* Text color is black */
       text-align: center;
       overflow: hidden;
     }
@@ -23,7 +23,7 @@
       background-image: url('background.jpg');
       background-size: cover;
       background-position: center;
-      filter: blur(5px); /* Slight blur */
+      filter: blur(5px);
       z-index: -1;
     }
 
@@ -38,8 +38,9 @@
     }
 
     .qr-code {
-      max-width: 200px;
+      max-width: 400px; /* 2x bigger than before */
       margin: 20px auto;
+      border-radius: 12px;
     }
 
     .button {
@@ -61,14 +62,8 @@
   <div class="background"></div>
 
   <div class="content">
-    <h1 class="text-2xl font-bold">Your simple click - is my big dream! ❤️</h1>
-    <p class="mt-2">
-      Help me reach my goal and change the life of my family!
-    </p>
-    <p class="mt-2">
-      Donate 1$ or more now and see the current total raised 🙏
-    </p>
-    <img src="qrcode.png" alt="QR Code" class="qr-code">
+    <h1 class="text-2xl font-bold">donate 1$ and see how many done like you! ❤️</h1>
+    <img src="IMG_0075.jpeg" alt="QR Code" class="qr-code">
     <button class="button" onclick="checkBalance()">Show Current Balance</button>
     <p id="balance" class="mt-4 text-lg"></p>
   </div>
